--- a/src/components/login/ForgotPasswordForm.module.css
+++ b/src/components/login/ForgotPasswordForm.module.css
@@ -4,8 +4,9 @@
     position: relative;
     left: 35%;
     width: 30%;
-    border: 1px solid gray;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 2%;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .mainLogo {
@@ -24,7 +25,7 @@
     width: 100%;
     height: 2.5em;
     border-radius: 4px;
-    border: 1px solid black;
+    border: 1px solid rgb(175, 166, 166);
     padding-left: 8px;
 }
 
