--- a/src/components/login/LoginForm.module.css
+++ b/src/components/login/LoginForm.module.css
@@ -36,7 +36,7 @@
 
 .loginButton button{
     height: 2.3rem;
-    width: 60%;
+    width: 100%;
     font-size: 18px;
     background-color: #984cd6;
     border: 1px solid #984cd6;
@@ -45,6 +45,10 @@
 }
 .loginButton button:hover {
     color: black;
+}
+
+.googleLogin {
+    padding: 0 1rem 0 1rem;
 }
 .googleLogin button{
     margin-bottom: 0.5em;
@@ -55,11 +59,13 @@
     border: 1px solid #984cd6;
     border-radius: 8px;
     color: white;
+    width: 100%;
 }
 .googleLogin button:hover {
     color: black;
 }
 .mainLinks {
+    margin-top: 1em;
     margin-bottom: 3em;
     text-align: center;
 }
