--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   background-color: #fcf3f6;
+  min-height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 h1 {
